# birds-dist-models

./: README.md  app.py  config.py  models.py  pyproject.toml  requirements.txt  run_catboost.py  setup.py  utils.py
ndvi_funcs/: get_ndvi_1.py  get_ndvi_2.py
src/: app.py  config.py  models.py  run_catboost.py  runner.py  utils.py
