[tool.poetry]
name = "birds-dist-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "birds_dist_model"}]

[tool.poetry.dependencies]
python = "3.9.13"
numpy = "1.23.1"
streamlit = "^1.24.1"
rpy2 = "^3.5.13"
catboost = "^1.2"
shap = "^0.42.0"
scikit-learn = "^1.3.0"
geopandas = "^0.13.2"
plotnine = "^0.12.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
